--- a/package.json
+++ b/package.json
@@ -12,17 +12,23 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/stack": "^6.3.11",
-    "expo": "~47.0.12",
+    "cors": "^2.8.5",
+    "expo": "^1.0.0",
     "expo-status-bar": "~1.4.2",
+    "express": "^4.18.2",
+    "mysql2": "^3.0.1",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
-    "react-native-screens": "~3.18.0"
+    "react-native-screens": "~3.18.0",
+    "sequelize": "^6.28.0",
+    "sequelize-cli": "^6.6.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "nodemon": "^2.0.20"
   },
   "private": true
 }
