--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/stack": "^6.3.11",
     "cors": "^2.8.5",
-    "expo": "^1.0.0",
+    "expo": "~45.0.0",
     "expo-status-bar": "~1.4.2",
     "express": "^4.18.2",
     "mysql2": "^3.0.1",
